# restful-ssh-config

./: .bumpversion.cfg  .gitignore  .travis.yml  Pipfile  README.md  README.rst  flask-and-descendants.cfg  rough_idea.py  sample_launcher.py  setup.cfg  setup.py  tox.ini
background/: README.rst  rough_idea_bootstrap.sh
restful_ssh_config/: __init__.py  application.py  base_model.py  config_file_model.py  flask-and-descendants.cfg  schemas.py
restful_ssh_config/data/: __init__.py  keywords.json
restful_ssh_config/generators/: keywords_generator.py
restful_ssh_config/models/: __init__.py  base_model.py  config_file_model.py  host_model.py  keyword.py  keyword_model.py  predefined_tables.py
tests/: test_main_module.py
tests/models/: test_base_model.py  test_config_file_model.py  test_host_model.py  test_keyword_model.py  test_models_submodule.py
