[metadata]
name = restful-ssh-config
version = 0.0.0
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license = ISC
classifiers =
	Development Status :: 1 - Planning

[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
	pytest-runner
tests_require =
	mock
	coverage
	pytest
	pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=restful_ssh_config --color=yes

[aliases]
test = pytest
